--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-size: 1.5em;
         }
         .container{
-            width: 500px;
+            max-width: 700px;
             margin: auto;
         }
         button{
